syntax = "proto3";

package game.v1;

import "progress/v1/progress.proto";
import "world/v1/world.proto";

option go_package = "github.com/openhexes/proto;gamev1";

message GetSampleWorldRequest {
  uint32 total_layers = 1;
  uint32 total_rows = 2;
  uint32 total_columns = 3;
  uint32 max_rows_per_segment = 4;
  uint32 max_columns_per_segment = 5;
}

message GetSampleWorldResponse {
  world.v1.World world = 1; // partial
  progress.v1.Progress progress = 2;
}

service GameService {
  rpc GetSampleWorld(GetSampleWorldRequest) returns (stream GetSampleWorldResponse);
}
